# KnowledgeTracing

./: .dockerignore  .flake8  .gitignore  ADVANCED.md  Dockerfile  LICENSE  Makefile  README.md  basedkt.py  baselstm.py  build_and_push_docker_image.sh  main.py  optimize.py  pyproject.toml  requirements.txt  routine_simulated.sh  run.py  seq2seq.py  tmp_experiments.sh  train
config/: 1023_adjust_seqlen_NEL.ini  1023_adjust_seqlen_NER.ini  1023_adjust_seqlen_NES.ini  1023_adjust_seqlen_NEW.ini  1111_adjust_seqlen.ini  1123_dkt_waviness.json  1124_eddkt_vs_dkt.json  1124_eddkt_waviness.json  1124_gdkt_generative.json  1124_geddkt.json  1125_assistments2015.json  1125_assistmentschall2017.json  1125_ksdkt.json  1126_pakdd_ksvector.json  1219_learn_w_sanity_dummy.json  1220_gt_all_assistment2009.json  1221_gt_assistment2015_all.json  1221_gt_searchPreX_assistment2009.json  20_0218_edm2020_asmt0910.grid.json  20_0220_edm2020_asmt15.grid.json  20_0222_edm2020_asmt15.grid.json  20_0227_dkvmn.grid.json  20_0301_edm2020_assist09.grid.json  20_0303_edm2020_assist09.grid.json  20_0303_edm2020_assist15.grid.json  20_0303_edm2020_statics.grid.json  20_0303_edm2020_synthetic.grid.json  20_0305_edm2020_synthetic.grid.json  20_0309_edm2020_assist09.grid.json  20_0309_edm2020_assist15.grid.json  20_0309_edm2020_statics.grid.json  20_0309_edm2020_synthetic.grid.json  20_0310_edm2020_assist09.grid.json  20_0310_edm2020_assist15.grid.json  20_0310_edm2020_statics.grid.json  20_0310_edm2020_synthetic.grid.json  20_0311_edm2020_statics.grid.json  20_0604_icce2020_dkt.grid.json  (+31 more)
model/: dkt.py  (+7 more)
(+133 files in other folders)
