[tool.poetry]
name = "knowledgetracing"
version = "0.1.0"
description = ""
authors = ["Qiushi Pan <qiu.gits@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.0"
scikit-learn = "^0.22.2"
numpy = "^1.18.3"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
python-dotenv = "^0.13.0"
requests = "^2.23.0"
tqdm = "^4.45.0"
click = "^7.1.2"
optuna = "^1.5.0"
jupyterlab = "^2.2.10"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.1"
isort = "^4.3.21"
rope = "^0.17.0"
networkx = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
